# osc-inception-converter

./: .buildinfo  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
_modules/: index.html
_modules/osc_inception_converter/: skeleton.html
_sources/api/: modules.rst.txt  osc_inception_converter.rst.txt
api/: modules.html  osc_inception_converter.html
docs/: conf.py  index.rst
scripts/: template-to-repo.sh
tests/: conftest.py  test_osc_data_extractor.py
